# alexandria3k

./: .buildinfo  .gitignore  .pylintrc  CITATION.cff  Pipfile  README.md  api.html  app-eg.html  asjcs.html  cli-eg.html  cli.html  common.html  crossref.html  csv_sources.html  datacite.html  debug.html  dev-plugin.html  dev.html  doaj.html  downloading.html  faq.html  funder_names.html  genindex.html  index.html  installation.html  intro.html  issn_subject_codes.html  journal_names.html  link_aa_base_ror.html  link_aa_top_ror.html  link_uspto_doi.html  link_works_asjcs.html  objects.inv  orcid.html  perf.html  plugin-api.html  pubmed.html  py-modindex.html  pyproject.toml  python-eg.html  (+8 more)
.github/workflows/: ci.yml  sphinx.yml
_sources/: api.rst.txt  app-eg.rst.txt  cli-eg.rst.txt  common.rst.txt  crossref.rst.txt  csv_sources.rst.txt  debug.rst.txt  dev-plugin.rst.txt  dev.rst.txt  downloading.rst.txt  faq.rst.txt  index.rst.txt  installation.rst.txt  intro.rst.txt  issn_subject_codes.rst.txt  link_aa_top_ror.rst.txt  link_uspto_doi.rst.txt  orcid.rst.txt  perf.rst.txt  pubmed.rst.txt  python-eg.rst.txt  ror.rst.txt  schema.rst.txt  user-api.rst.txt
_sources/cli/: index.rst.txt
_static/: documentation_options.js
cli/: index.html
docs/: Makefile  api.rst  app-eg.rst  asjcs.rst  cli-eg.rst  cli.rst  conf.py  crossref.rst  csv_sources.rst  datacite.rst  dev-plugin.rst  dev.rst  doaj.rst  downloading.rst  faq.rst  funder_names.rst  index.rst  installation.rst  intro.rst  journal_names.rst  link_aa_base_ror.rst  link_uspto_doi.rst  link_works_asjcs.rst  orcid.rst  plugin-api.rst  python-eg.rst  requirements.txt  ror.rst  schema.rst  use.rst  user-api.rst  uspto.rst  utility-api.rst
docs/schema/: .gitignore  README.md  crossref.dot  datacite.dot  orcid.dot  other.dot  pubmed.dot  ror.dot  uspto.dot
examples/: Makefile  README.md  graph-index.sql  impact-factor-2021.sql  impact.sql  most-cited-3y.sql  most-cited-in-3y.sql  orcid-metrics.sql  se-metrics.sql  software-5y.sql  test-all.sh
examples/author-productivity/: .gitignore  Makefile  README.md  author-productivity.sql  frequent-names.sql  yearly_authors.rdbu  yearly_authors.sql  yearly_works.sql
examples/authors-by-decade/: .gitignore  Makefile  README.md  authors-by-decade.sql  num_work_authors.sql
examples/cdindex/: .gitignore  Makefile  README.md  cd5index-all-py.sql  cd5index-all.sql  cdindex-db.cpp  cdindex-db.py  cdindex-multi.slurm  cdindex-otf.py  compress.slurm  cs_works.sed  make.slurm  nature-example.sql  one.sql  valid_cd5index.sql  yearly-cdindex.sql
examples/common/: .gitignore  Makefile  dummy.sql  fetch-pubmed.sh  fetch-uspto.sh  index-normalize.sql
examples/covid/: .gitignore  Makefile  README.md  author-number-quartiles.sql  funders.sql  inner-citations.sql  number-of-authors.sql  number-of-works.sql  period-works-by-type.sql  subjects.sql  work-affiliations.rdbu  work-affiliations.sql  works-by-type.sql
examples/crossref-standalone/: Makefile  README.md  work-metrics.sql  yearly-abstracts.sql  yearly-journals.sql
examples/cs_cdindex/: .gitignore  Makefile  cdindex-by-type.sql  cdindex.sql  citations_number.sql  cs_works.sed  references_number.sql  top-consolidating.sql  top-disruptive.sql
schema/: .gitignore  README.md  crossref.dot  orcid.dot  other.dot  ror.dot  schema-head.dot
src/: Pipfile  a2k.py  requirements.txt
tests/: common.py  link-works-asjcs.rdbu  normalize-asjc-general-fields.rdbu  normalize-asjc-subject-areas.rdbu  normalize-asjc.rdbu  test_asjcs.py  test_common.py  test_completion_facilities.py  test_crossref.py  test_csv_sources.py  test_debug.py  test_dir.py  test_doaj.py  test_file_xml_cache.py  test_funder_names.py  test_journal_names.py  test_link_aa_ror.py  test_main.py  test_orcid.py  test_perf.py  test_ror.py  test_tsort.py  test_uspto_zip_cache.py  test_virtual_db.py  test_xml.py  work-authors-top-rors.rdbu
tests/data/: doaj.csv  (+4 more)
(+361 files in other folders)
