[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alexandria3k"
version = "2.3.1"
authors = [
  { name="Diomidis Spinellis", email="dds@aueb.gr" },
]
description = "Efficient relational database queries over the entire Crossref abnd ORCID data sets"
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
  "apsw",
  "importlib-metadata",
  "pyahocorasick",
]

# See https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://github.com/dspinellis/alexandria3k"
"Bug Tracker" = "https://github.com/dspinellis/alexandria3k/issues"

[project.scripts]
alexandria3k = "alexandria3k.__main__:main"
