[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alexandria3k"
version = "3.4.0"
authors = [
  { name="Diomidis Spinellis", email="dds@aueb.gr" },
]
description = "Efficient relational database queries over the entire Crossref abnd ORCID data sets"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}

dependencies = [
  "apsw",
  "importlib-metadata",
  "pyahocorasick",
]

# See https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://github.com/dspinellis/alexandria3k"
"Repository" = "https://github.com/dspinellis/alexandria3k.git"
"Bug Tracker" = "https://github.com/dspinellis/alexandria3k/issues"
"Documentation" = "https://dspinellis.github.io/alexandria3k/"

[project.scripts]
a3k = "alexandria3k.__main__:main"
